diagweave/tests/ui/union/from_requires_single_tuple_field.stderr
error: #[from] requires exactly one tuple field variant, e.g. Variant(Source)
 --> tests/ui/union/from_requires_single_tuple_field.rs:5:9
  |
5 | /         #[from]
6 | |         NotTuple { code: u32 },
  | |______________________________^
