diagweave/tests/ui/union/from_requires_single_tuple_field.rs
use diagweave::union;

union! {
    enum BadFrom = {
        #[from]
        NotTuple { code: u32 },
    }
}

fn main() {}
